[tool:pytest]
norecursedirs= .* *.egg* build dist conda.recipe
addopts =
    --cov das
    -k tests
    --ignore setup.py
    --ignore run_test.py
    --tb native
    --strict-markers
    -vv
markers =
    serial: execute test serially (to avoid race conditions)


[options.extras_require]
development = 
  pytest
  pytest-cov
  coverage
  black
  build
  twine